# fast-context

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
benchmarks/: __init__.py  data.py  metrics.py  run_repo_map_ab.py  run_retrieval_benchmark.py
benchmarks/results/: retrieval-fastapi-axios-2026-06-01.json
src/: core.py  extract_key.py  fast_context_cli.py  local_repo_map.py  local_semble.py
tests/: test_benchmark_metrics.py  test_extract_key.py  test_local_repo_map.py  test_local_semble.py  test_model_fallback.py  test_output_format.py
